Fixed select z-index position

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,6 +7,7 @@
   color: #333;
   font-size: 1rem;
   font-family: system-ui, sans-serif;
+  z-index: 10;
 }
 
 .select-wrapper ul {
